--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,20 @@ main {
     text-align: center;
   }
 }
+
+.content {
+  display: flex;
+  > mat-card {
+    margin: 20px 0;
+    box-sizing: border-box;
+
+    &:first-child {
+      width: 25%;
+      margin-right: 20px;
+    }
+
+    &:last-child {
+      width: 75%;
+    }
+  }
+}
