--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,81 @@
       </div>
     </div>
   </nav>
+  <section class="section">
+    <div class="columns">
+      <div class="column is-one-third">
+        <h3 class="subtitle is-3">Lists</h3>
+        <aside class="menu">
+          <p class="menu-label">
+            Category 1
+          </p>
+          <ul class="menu-list">
+            <li><a>Dashboard</a></li>
+            <li><a>Customers</a></li>
+          </ul>
+          <p class="menu-label">
+            Category 2
+          </p>
+          <ul class="menu-list">
+            <li><a>Team Settings</a></li>
+            <li><a>Invitations</a></li>
+            <li><a>Cloud Storage Environment Settings</a></li>
+            <li><a>Authentication</a></li>
+          </ul>
+          <p class="menu-label">
+            Category 3
+          </p>
+          <ul class="menu-list">
+            <li><a>Payments</a></li>
+            <li><a>Transfers</a></li>
+            <li><a>Balance</a></li>
+          </ul>
+        </aside>
+      </div>
+      <div class="column">
+        <h2 class="subtitle is-2">Selected List</h2>
+        <div class="field has-addons">
+          <p class="control is-expanded">
+            <input
+              class="input"
+              v-model="newTodoText"
+              type="text"
+              placeholder="New Todo"
+              aria-label="Text input with checkbox"
+            />
+          </p>
+          <p class="control">
+            <button class="button is-primary" type="button">
+              Add
+            </button>
+          </p>
+        </div>
+        <div class="field has-addons">
+          <p class="control">
+            <span class="select">
+              <select v-model="completed">
+                <option :value="false">Todo</option>
+                <option :value="true">Done</option>
+              </select>
+            </span>
+          </p>
+          <p class="control is-expanded">
+            <input
+              class="input"
+              v-model="text"
+              type="text"
+              aria-label="Text input with checkbox"
+            />
+          </p>
+          <p class="control">
+            <button class="button is-danger" type="button">
+              <i class="fas fa-trash-alt"></i>
+            </button>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 
 <router-outlet></router-outlet>
