--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
         aria-label="menu"
         aria-expanded="false"
         data-target="navbarBasicExample"
+        (click)="toggleBurger()"
       >
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
@@ -21,11 +22,11 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item">
+        <a class="navbar-item" [routerLink]="['/']">
           Todos
         </a>
 
-        <a class="navbar-item">
+        <a class="navbar-item" [routerLink]="['/categories']">
           Categories
         </a>
       </div>
