--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
       <a
         role="button"
         class="navbar-burger burger"
+        [ngClass]="{ 'is-active': burgerOpen }"
         aria-label="menu"
         aria-expanded="false"
         data-target="navbarBasicExample"
@@ -20,7 +21,11 @@
       </a>
     </div>
 
-    <div id="navbarBasicExample" class="navbar-menu">
+    <div
+      id="navbarBasicExample"
+      class="navbar-menu"
+      [ngClass]="{ 'is-active': burgerOpen }"
+    >
       <div class="navbar-start">
         <a class="navbar-item" [routerLink]="['/']">
           Todos
