--- a/src/app/todo/todo-page.component.html
+++ b/src/app/todo/todo-page.component.html
@@ -9,7 +9,11 @@
           </p>
           <ul class="menu-list">
             <li *ngFor="let list of listsWithCategory(category.id)">
-              <a (click)="selectList(list.id)">{{ list.name }}</a>
+              <a
+                (click)="selectList(list.id)"
+                [routerLink]="['/list/', list.id]"
+                >{{ list.name }}</a
+              >
             </li>
           </ul>
         </div>
