--- a/src/app/todo/todo-page.component.html
+++ b/src/app/todo/todo-page.component.html
@@ -1,5 +1,6 @@
-<section class="section">
-  <div class="columns">
+<section>
+  <nb-menu [items]="menuItems"></nb-menu>
+  <!-- <div class="columns">
     <div class="column is-one-third">
       <h3 class="subtitle is-3">Lists</h3>
       <aside class="menu">
@@ -61,5 +62,5 @@
         </p>
       </div>
     </div>
-  </div>
+  </div> -->
 </section>
