--- a/src/app/header/nav-bar.component.html
+++ b/src/app/header/nav-bar.component.html
@@ -1,3 +1,13 @@
-<p>
-  nav-bar works!
-</p>
+<h3>{{ title }}</h3>
+<nb-actions>
+  <nb-action>
+    <a [routerLink]="['/']">
+      Todos
+    </a>
+  </nb-action>
+  <nb-action>
+    <a [routerLink]="['/categories']">
+      Categories
+    </a>
+  </nb-action>
+</nb-actions>
