Added new list button

--- a/src/app/todo/todo-page.component.html
+++ b/src/app/todo/todo-page.component.html
@@ -5,6 +5,7 @@
     </nb-layout-header>
 
     <nb-sidebar>
+      <button nbButton fullWidth size="xsmall">New List</button>
       <nb-menu tag="todoListsMenu" [items]="menuItems"></nb-menu>
     </nb-sidebar>
 
