--- a/src/app/todo/todo-page.component.scss
+++ b/src/app/todo/todo-page.component.scss
@@ -1,7 +1,20 @@
-button {
+nb-sidebar button {
   margin-bottom: 1.25rem;
 }
 
 h1 {
   margin-top: 0;
+}
+
+nb-card-body.inline-input-card {
+  display: flex;
+  align-items: center;
+
+  button {
+    margin-left: 1.25rem;
+  }
+
+  label {
+    padding-right: 1.25rem;
+  }
 }
