Not creating new list if new name is empty

--- a/src/app/todo/todo-page.component.scss
+++ b/src/app/todo/todo-page.component.scss
@@ -18,3 +18,9 @@ nb-card-body.inline-input-card {
     padding-right: 1.25rem;
   }
 }
+
+nb-card.create-todo-modal {
+  input {
+    margin-bottom: 1.25rem;
+  }
+}
