--- a/src/app/todo/todo-page.component.html
+++ b/src/app/todo/todo-page.component.html
@@ -1,5 +1,5 @@
 <ng-template #createListDialog let-data let-ref="createListRef">
-  <nb-card>
+  <nb-card class="create-todo-modal">
     <nb-card-header>
       Create List
     </nb-card-header>
