--- a/src/app/todo/todo-page.component.scss
+++ b/src/app/todo/todo-page.component.scss
@@ -20,7 +20,8 @@ nb-card-body.inline-input-card {
 }
 
 nb-card.create-todo-modal {
-  input {
+  input,
+  nb-select {
     margin-bottom: 1.25rem;
   }
 }
