--- a/src/app/categories/categories-page.component.scss
+++ b/src/app/categories/categories-page.component.scss
@@ -14,3 +14,13 @@ nb-card-body.inline-input-card {
     padding-right: 1.25rem;
   }
 }
+
+nb-card.create-category-modal {
+  input {
+    margin-bottom: 1.25rem;
+  }
+}
+
+.create-category-button {
+  float: right;
+}
